nextcloud/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: production
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`nextcloud.staging.imranr.dev`)
      kind: Rule
      middlewares:
        - name: forwardauth-geoblock
          namespace: production
      services:
        - name: nextcloud
          port: 80
  tls:
    secretName: imranr-dev-tls
