nextcloud/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-db
  template:
    metadata:
      labels:
        app: nextcloud-db
    spec:
      securityContext:
        runAsUser: $MY_UID
        runAsGroup: $MY_UID
        fsGroup: $MY_UID
      containers:
        - name: nextcloud-db
          image: postgres:16-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: nextcloud-volume
              subPath: db
      volumes:
        - name: nextcloud-volume
          persistentVolumeClaim:
            claimName: nextcloud-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: production
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: nextcloud-db
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-db
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: nextcloud-db
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: nextcloud
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nextcloud
